ubiquity (2.5.21) UNRELEASED; urgency=low

  * Add a set_autopartition_options method stub.
  * Don't display the package preservation progress message if it's
    ultimately going to be skipped.

 -- Evan Dandrea <ev@ubuntu.com>  Tue, 01 Mar 2011 05:34:21 +0000

ubiquity (2.5.20) natty; urgency=low

  * Merge the automatic partitioner redesign branch (LP: #723849).

 -- Evan Dandrea <ev@ubuntu.com>  Tue, 01 Mar 2011 04:48:11 +0000

ubiquity (2.5.19) natty; urgency=low

  [ Colin Watson ]
  * Automatic update of included source packages: base-installer
    1.116ubuntu1, console-setup 1.57ubuntu8, flash-kernel 2.28ubuntu15,
    partman-auto 93ubuntu8, partman-target 71ubuntu2.

  [ Bryce Harrington ]
  * Revert "Queue a redraw of the panel after setting the background".  This
    change is implicated in a memory leak leading to OOM conditions and
    eventual crash of Xserver.  (Possible fix for LP: #714829, would reopen
    693300)

  [ Mario Limonciello ]
  * Fix reference leak in panel set_background function.

 -- Colin Watson <cjwatson@ubuntu.com>  Mon, 28 Feb 2011 19:54:45 +0000

ubiquity (2.5.18) natty; urgency=low

  * Automatic update of included source packages: partman-auto
    93ubuntu6.

 -- Mario Limonciello <Mario_Limonciello@Dell.com>  Thu, 24 Feb 2011 17:54:41 -0600

ubiquity (2.5.17) natty; urgency=low

  * Do not show the installer in dbusmneu.  Thanks Ken VanDine!
  * Install a composite-enabled graphics driver when the third-party
    software option is checked.

 -- Evan Dandrea <ev@ubuntu.com>  Thu, 24 Feb 2011 16:58:05 +0000

ubiquity (2.5.16) natty; urgency=low

  [ Evan Dandrea ]
  * Rename the keyboard layout guessing button (LP: #717500).
  * Install oem-config-slideshow-ubuntu alongside oem-config-gtk.
  * Fix accessibility support in the installer session.
  * Automatic update of included source packages: flash-kernel
    2.28ubuntu14, partman-auto 93ubuntu5.

  [ Mario Limonciello ]