@@ -3,6 +3,8 @@ ubiquity (2.5.21) UNRELEASED; urgency=low
   * Add a set_autopartition_options method stub.
   * Don't display the package preservation progress message if it's
     ultimately going to be skipped.
+  * Show the progress bar as soon as we have a final autopartitioning
+    option.
 
  -- Evan Dandrea <ev@ubuntu.com>  Tue, 01 Mar 2011 05:34:21 +0000
 
